--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </p>
     <div class="buttons">
       <a href="https://discord.gg/YOUR_DISCORD_INVITE" target="_blank">Discord</a>
-      <a href="mailto:YOUR_EMAIL@example.com">Email</a>
+      <a href="mailto:lazul49562@gmail.com">Email</a>
       <a href="https://x.com/YOUR_X_HANDLE" target="_blank">X</a>
     </div>
   </div>
