--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lazul | Discord Bot Developer</title>
+  <title>Lazul - Custom Discord Bots</title>
   <meta name="description" content="Our bot builder for only £4 — get it now!!!">
+  
+  <!-- Favicon -->
+  <link rel="icon" href="https://i.postimg.cc/L6ThRgY8/android-chrome-192x192.png" type="image/png">
+
   <style>
     /* Reset & body */
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -106,7 +110,7 @@
 
   <!-- Main Card -->
   <div class="main-card">
-    <img src="YOUR_PROFILE_IMAGE_URL_HERE" alt="Lazul Profile" class="profile-img">
+    <img src="https://i.postimg.cc/L6ThRgY8/android-chrome-192x192.png" alt="Lazul Profile" class="profile-img">
     <h1>Lazul</h1>
     <h2>Discord Bot Developer</h2>
     <p class="short-desc">
