--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       Custom Discord bots: £4 for a standard bot, £6 for premium bots!
     </p>
     <div class="buttons">
-      <a href="https://discord.gg/YOUR_DISCORD_INVITE" target="_blank">Discord</a>
+      <a href="https://discord.gg/ePe234Hjpz" target="_blank">Discord</a>
       <a href="mailto:lazul49562@gmail.com">Email</a>
       <a href="https://x.com/YOUR_X_HANDLE" target="_blank">X</a>
     </div>
