--- a/index.html
+++ b/index.html
@@ -1,115 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Fizo | Discord Bot Designer</title>
 <style>
-  * { margin:0; padding:0; box-sizing:border-box; }
-  body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; scroll-behavior:smooth; background:#111; color:#fff; }
+/* ======= General Styles ======= */
+* { box-sizing:border-box; margin:0; padding:0; }
+body { font-family:"Segoe UI", Tahoma, Geneva, Verdana, sans-serif; background:#111; color:#fff; line-height:1.6; scroll-behavior:smooth; }
+a { color:#ff9900; text-decoration:none; }
+a:hover { text-decoration:underline; }
+h1,h2,h3,h4,h5 { color:#ff9900; }
 
-  nav {
-    position: fixed; top:0; width:100%; background:#111; display:flex; justify-content:center; z-index:1000; padding:15px 0;
-  }
-  nav a { color:#fff; text-decoration:none; margin:0 20px; font-weight:bold; transition:color 0.3s; }
-  nav a:hover { color:#ff9900; }
+/* ======= Navigation ======= */
+nav { position:fixed; top:0; left:0; right:0; height:60px; background:#111; display:flex; align-items:center; justify-content:center; z-index:1000; }
+nav a { margin:0 18px; font-weight:700; }
 
-  section { min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; padding:50px 20px; width:100%; text-align:center; }
-  .hero { background:#111; }
-  .projects { background:#1a1a1a; color:#fff; }
-  .about { background:#111; }
-  .contact { background:#1a1a1a; }
+/* ======= Sections ======= */
+section { padding:100px 20px 60px; min-height:100vh; text-align:center; }
+.lead { max-width:880px; margin:0 auto 20px; color:#ddd; font-size:1.05rem; }
 
-  .hero h1 { font-size:3em; margin-bottom:10px; }
-  .hero p { font-size:1.5em; color:#ff9900; }
+/* ======= Shop Cards ======= */
+.shop-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px; }
+.card { background:#222; border-radius:12px; padding:20px; width:300px; text-align:left; transition:.2s; position:relative; }
+.card:hover { transform:translateY(-6px); box-shadow:0 10px 25px rgba(0,0,0,0.5); }
+.card .badge { position:absolute; top:14px; right:14px; background:#ff9900; color:#111; padding:5px 8px; border-radius:6px; font-size:0.85rem; font-weight:700; }
+.price { font-weight:800; font-size:1.25rem; margin-bottom:8px; }
+.btn { display:inline-block; padding:10px 14px; border-radius:8px; border:2px solid #ff9900; color:#ff9900; background:transparent; font-weight:700; cursor:pointer; }
+.btn.primary { background:#ff9900; color:#111; border-color:#ff9900; }
 
-  .projects h2, .about h2, .contact h2 { margin-bottom:20px; color:#ff9900; }
+/* ======= Basket Icon ======= */
+#basket-icon { position:fixed; bottom:20px; right:20px; width:56px; height:56px; border-radius:50%; background:#ff9900; color:#111; display:flex; align-items:center; justify-content:center; cursor:pointer; z-index:1100; }
+#basket-icon .count { position:absolute; top:-8px; right:-8px; background:#111; color:#ff9900; width:24px; height:24px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:800; font-size:0.85rem; }
 
-  .projects p {
-    max-width:800px; margin-bottom:20px; line-height:1.8; font-size:1.1em; color:#ddd;
-  }
+/* ======= Basket Panel ======= */
+.basket-panel { position:fixed; bottom:86px; right:20px; width:360px; max-height:70vh; background:#181818; border-radius:12px; padding:14px; box-shadow:0 18px 50px rgba(0,0,0,0.6); display:none; overflow:auto; z-index:1100; }
+.basket-panel.open { display:block; }
+.basket-item { display:flex; justify-content:space-between; align-items:flex-start; padding:10px 6px; border-bottom:1px solid rgba(255,255,255,0.05); }
+.basket-item .actions { display:flex; gap:8px; }
+.remove-x { background:transparent; border:0; color:#ddd; font-size:1.05rem; cursor:pointer; }
+.personalized { color:#79c879; font-weight:700; font-size:0.9rem; }
 
-  .contact a {
-    display:inline-block; margin:10px; padding:12px 25px; border:2px solid #ff9900; border-radius:8px;
-    color:#ff9900; text-decoration:none; font-weight:bold; transition:all 0.3s;
-  }
-  .contact a:hover { background:#ff9900; color:#111; }
+/* Checkout button */
+.checkout-btn { width:100%; margin-top:8px; padding:10px; border-radius:8px; border:0; cursor:pointer; font-weight:900; font-size:1rem; }
+.checkout-btn.disabled { background:rgba(255,153,0,0.25); color:#222; cursor:not-allowed; }
+.checkout-btn.enabled { background:#ff9900; color:#111; }
 
-  .fade-in { opacity:0; transform:translateY(30px); transition:all 0.8s ease-out; }
-  .fade-in.visible { opacity:1; transform:translateY(0); }
+/* Modal */
+.modal-backdrop { position:fixed; inset:0; background:rgba(0,0,0,0.6); display:none; align-items:center; justify-content:center; z-index:1200; }
+.modal-backdrop.open { display:flex; }
+.modal { width:92%; max-width:600px; background:#151515; border-radius:12px; padding:20px; color:#ddd; }
+.modal h3 { color:#ff9900; margin-bottom:12px; }
+.modal label { display:block; margin:8px 0 6px; font-size:0.92rem; }
+.modal input, .modal textarea { width:100%; padding:10px; border-radius:8px; border:1px solid rgba(255,255,255,0.06); background:#111; color:#fff; }
+.modal textarea { min-height:100px; resize:vertical; }
+.modal .actions { display:flex; justify-content:flex-end; gap:10px; margin-top:14px; }
 
-  @media (max-width:768px){
-    nav a { margin:0 10px; font-size:0.9em; }
-    .projects p { font-size:1em; }
-  }
+@media(max-width:820px){ .shop-container{flex-direction:column; align-items:center;} .basket-panel{width:90%; right:5%; left:5%;} }
 </style>
 </head>
 <body>
-
+<!-- Navigation -->
 <nav>
-  <a href="#hero">Home</a>
-  <a href="#projects">Portfolio</a>
-  <a href="#about">About</a>
-  <a href="#contact">Contact</a>
+<a href="#hero">Home</a>
+<a href="#projects">Portfolio</a>
+<a href="#shop">Shop</a>
+<a href="#about">About</a>
+<a href="#contact">Contact</a>
 </nav>
 
-<section id="hero" class="hero fade-in">
-  <h1>Fizo</h1>
-  <p>Professional Discord Bot Designer & Developer</p>
+<!-- Hero -->
+<section id="hero">
+<h1>Fizo</h1>
+<div class="tag">Professional Discord Bot Designer & Developer</div>
 </section>
 
-<section id="projects" class="projects fade-in">
-  <h2>What I Do</h2>
-  <p>
-    I specialize in designing and developing high-quality, custom Discord bots built to enhance your community’s experience.  
-    Each bot is crafted with precision, focusing on both performance and usability — whether it’s for moderation, automation, tickets, leveling, or entertainment.
-  </p>
-  <p>
-    Over the past year, I’ve successfully completed <strong>more than 75 custom orders</strong> for clients and Discord servers of all sizes.  
-    My bots are known for their clean design, efficient functionality, and ease of use — helping server owners run their communities smoothly and professionally.
-  </p>
-  <p>
-    I handle every project personally — from concept and command structure to interface and setup.  
-    Whether you need a full-featured multi-purpose bot or a simple automation system, I’ll ensure it fits your brand, server culture, and vision perfectly.
-  </p>
-  <p>
-    My goal is simple: to deliver Discord bots that feel reliable, unique, and built with care — the kind of tools that make your community stand out.
-  </p>
+<!-- Portfolio -->
+<section id="projects">
+<h2>What I Do</h2>
+<p class="lead">
+I design and develop custom Discord bots that improve community engagement and server management. Each project is tailored to the server's needs — moderation, automation, ticket systems, music, economy systems, and more.
+</p>
+<p class="lead">
+Over the last year I’ve completed <strong>75+ custom orders</strong>. Every bot is built for reliability and ease of use.
+</p>
 </section>
 
-<section id="about" class="about fade-in">
-  <h2>About Me</h2>
-  <p>
-    I’m <strong>Fizo</strong> — a passionate Discord developer and designer who loves building functional and creative digital tools.  
-    I focus on creating systems that make community management easier, smoother, and more engaging.  
-    My work combines clean coding practices, visual consistency, and seamless user interaction.
-  </p>
-  <p>
-    With expertise in <strong>JavaScript</strong>, <strong>Node.js</strong>, and Discord API frameworks, I strive to ensure that every bot I deliver performs flawlessly.  
-    Beyond just coding, I also help with bot setup, customization, and server integration — giving clients a complete, ready-to-use experience.
-  </p>
+<!-- Shop -->
+<section id="shop">
+<h2>Shop / Services</h2>
+<div class="shop-container">
+<div class="card" data-id="basic">
+<h3>Basic Bot Package</h3>
+<div class="price">$5</div>
+<p>Simple Discord bot with basic commands and automation. Hosting not included.</p>
+<button class="btn" data-add="basic">Add to Basket</button>
+</div>
+
+<div class="card" data-id="advanced">
+<div class="badge">Recommended</div>
+<h3>Advanced Bot Package</h3>
+<div class="price">$10</div>
+<p>Custom bot with moderation, ticketing, music, leveling. Hosting not included.</p>
+<button class="btn" data-add="advanced">Add to Basket</button>
+</div>
+
+<div class="card" data-id="premium">
+<h3>Premium Bot Package</h3>
+<div class="price">$15</div>
+<p>Full customization, multiple modules, and advanced automation. Hosting not included.</p>
+<button class="btn" data-add="premium">Add to Basket</button>
+</div>
+</div>
 </section>
 
-<section id="contact" class="contact fade-in">
-  <h2>Contact Me</h2>
-  <a href="mailto:lazul@fizo.uk">Email Me</a>
-  <a href="https://discord.gg/ePe234Hjpz" target="_blank">Join My Discord Server</a>
-  <a href="https://twitter.com/YOURTWITTER" target="_blank">X (Twitter)</a>
+<!-- About -->
+<section id="about">
+<h2>About Me</h2>
+<p class="lead">
+I build production-quality Discord bots using JavaScript and Node.js, focusing on maintainable code and clear documentation.
+</p>
 </section>
+
+<!-- Contact -->
+<section id="contact">
+<h2>Contact</h2>
+<p class="lead">Email: <a href="mailto:lazul@fizo.uk">lazul@fizo.uk</a></p>
+<p style="margin-top:8px;"><a href="https://discord.gg/ePe234Hjpz" target="_blank" class="btn">Join My Discord Server</a></p>
+</section>
+
+<!-- Basket Icon -->
+<div id="basket-icon"><span style="font-size:22px;">🛒</span><div class="count" id="basket-count">0</div></div>
+
+<!-- Basket Panel -->
+<div class="basket-panel" id="basket-panel"></div>
+
+<!-- Personalization Modal -->
+<div class="modal-backdrop" id="modal-backdrop">
+<div class="modal">
+<h3>Personalize Your Bot</h3>
+<label>Discord Username</label>
+<input type="text" id="personal-discord" placeholder="e.g. User#1234"/>
+<label>Email</label>
+<input type="email" id="personal-email" placeholder="you@example.com"/>
+<label>Bot Description / Details</label>
+<textarea id="personal-desc" placeholder="Describe what your bot should do..."></textarea>
+<div class="actions">
+<button class="btn primary" id="modal-save">Save</button>
+<button class="btn" id="modal-cancel">Cancel</button>
+</div>
+</div>
+</div>
 
 <script>
-  const faders = document.querySelectorAll('.fade-in');
-  const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -50px 0px" };
-  const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll){
-    entries.forEach(entry => {
-      if(entry.isIntersecting){
-        entry.target.classList.add('visible');
-        appearOnScroll.unobserve(entry.target);
-      }
-    });
-  }, appearOptions);
-  faders.forEach(fader => { appearOnScroll.observe(fader); });
-</script>
+// ======= Data & State =======
+const packages = {
+  basic:{title:"Basic Bot Package", price:5},
+  advanced:{title:"Advanced Bot Package", price:10},
+  premium:{title:"Premium Bot Package", price:15}
+};
+let basket = [];
+let editingIndex = null;
+const ORDER_LIMIT = 3;
+const ORDER_KEY = 'fizo_order_times'; // localStorage
 
+// ======= Utility =======
+function updateBasketUI(){
+  const count = basket.length;
+  document.getElementById('basket-count').textContent = count;
+  const panel = document.getElementById('basket-panel');
+  panel.innerHTML = '';
+  if(count===0){ panel.innerHTML="<p>Basket is empty.</p>"; return; }
+  basket.forEach((item,i)=>{
+    const div = document.createElement('div');
+    div.className='basket-item';
+    div.innerHTML=`<div>
+      <strong>${packages[item.id].title}</strong><br/>
+      <span>$${packages[item.id].price}</span><br/>
+      ${item.personalized?'<span class="personalized">Personalized</span>':'<span>Not personalized</span>'}
+    </div>
+    <div class="actions">
+      <button class="btn" onclick="editItem(${i})">✏️</button>
+      <button class="remove-x" onclick="removeItem(${i})">❌</button>
+    </div>`;
+    panel.appendChild(div);
+  });
+  const checkout = document.createElement('button');
+  checkout.className='checkout-btn '+(basket.every(it=>it.personalized)?'enabled':'disabled');
+  checkout.textContent='Confirm Order';
+  checkout.onclick=checkoutOrder;
+  panel.appendChild(checkout);
+}
+function editItem(i){
+  editingIndex = i;
+  const item = basket[i];
+  document.getElementById('personal-discord').value = item.personal.discord||'';
+  document.getElementById('personal-email').value = item.personal.email||'';
+  document.getElementById('personal-desc').value = item.personal.desc||'';
+  document.getElementById('modal-backdrop').classList.add('open');
+}
+function removeItem(i){ basket.splice(i,1); updateBasketUI(); }
+function savePersonal(){
+  const discord = document.getElementById('personal-discord').value.trim();
+  const email = document.getElementById('personal-email').value.trim();
+  const desc = document.getElementById('personal-desc').value.trim();
+  if(!discord||!email||!desc){ alert('All fields required'); return; }
+  basket[editingIndex].personal={discord,email,desc};
+  basket[editingIndex].personalized=true;
+  editingIndex=null;
+  document.getElementById('modal-backdrop').classList.remove('open');
+  updateBasketUI();
+}
+
+// ======= Event Listeners =======
+document.querySelectorAll('.btn[data-add]').forEach(btn=>{
+  btn.onclick=()=>{
+    basket.push({id:btn.dataset.add,personalized:false,personal:{}});
+    updateBasketUI();
+  };
+});
+document.getElementById('basket-icon').onclick=()=>{ document.getElementById('basket-panel').classList.toggle('open'); };
+document.getElementById('modal-cancel').onclick=()=>{ document.getElementById('modal-backdrop').classList.remove('open'); editingIndex=null; };
+document.getElementById('modal-save').onclick=savePersonal;
+
+// ======= Checkout / Orders =======
+function checkoutOrder(){
+  if(!basket.every(it=>it.personalized)){ alert('Please personalize all items'); return; }
+  // Order limit check
+  let times = JSON.parse(localStorage.getItem(ORDER_KEY)||'[]');
+  const cutoff = Date.now()-24*60*60*1000;
+  times = times.filter(ts=>ts>=cutoff);
+  if(times.length+basket.length>ORDER_LIMIT){ alert('⚠️ You have reached 3 orders in 24h'); return; }
+  // Save new timestamps
+  const newTimes = times.concat(Array(basket.length).fill(Date.now()));
+  localStorage.setItem(ORDER_KEY, JSON.stringify(newTimes));
+  // Send to webhook
+  basket.forEach(item=>{
+    fetch('https://discord.com/api/webhooks/1427597003914739824/A22azsFWrFDYhdSBaaq_W4if4QyAv6mmcrL-L0X6WpiS05W6FByqCfFJjaNu435h7rHZ',{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({
+        content:`📦 **New Bot Order Received!**
+**Package:** ${packages[item.id].title}
+**Price:** $${packages[item.id].price}
+**Discord:** ${item.personal.discord}
+**Email:** ${item.personal.email}
+**Bot Description:** ${item.personal.desc}`
+      })
+    });
+  });
+  alert('✅ Order received! Please check your Discord DMs for payment instructions.');
+  basket=[];
+  updateBasketUI();
+}
+updateBasketUI();
+</script>
 </body>
 </html>
