--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@ section { padding:100px 20px 60px; min-height:100vh; text-align:center; }
 .modal textarea { min-height:100px; resize:vertical; }
 .modal .actions { display:flex; justify-content:flex-end; gap:10px; margin-top:14px; }
 
+/* ======= Plop Animation ======= */
+@keyframes plop { 0%{transform:scale(1) translateY(0) rotate(0deg);opacity:1;}50%{transform:scale(1.3) translateY(-20px) rotate(15deg);opacity:0.8;}100%{transform:scale(0.1) translateY(-100px) rotate(360deg);opacity:0;} }
+.plop-img { position:absolute; width:60px; height:60px; pointer-events:none; z-index:2000; border-radius:8px; animation:plop 0.7s forwards; }
+
 @media(max-width:820px){ .shop-container{flex-direction:column; align-items:center;} .basket-panel{width:90%; right:5%; left:5%;} }
 </style>
 </head>
@@ -214,9 +218,27 @@ function savePersonal(){
 
 // ======= Event Listeners =======
 document.querySelectorAll('.btn[data-add]').forEach(btn=>{
-  btn.onclick=()=>{
+  btn.onclick=(e)=>{
+    const card = btn.closest('.card');
+    const rect = card.getBoundingClientRect();
+
+    // Add item to basket
     basket.push({id:btn.dataset.add,personalized:false,personal:{}});
     updateBasketUI();
+
+    // Create floating clone for plop
+    const clone = card.cloneNode(true);
+    clone.className='plop-img';
+    document.body.appendChild(clone);
+    clone.style.left = rect.left+'px';
+    clone.style.top = rect.top+'px';
+
+    const basketIcon = document.getElementById('basket-icon');
+    const basketRect = basketIcon.getBoundingClientRect();
+    clone.style.transition='transform 0.7s ease-in-out';
+    clone.style.transform = `translate(${basketRect.left - rect.left}px, ${basketRect.top - rect.top}px) scale(0.1) rotate(360deg)`;
+
+    setTimeout(()=>clone.remove(),700);
   };
 });
 document.getElementById('basket-icon').onclick=()=>{ document.getElementById('basket-panel').classList.toggle('open'); };
@@ -226,15 +248,12 @@ document.getElementById('modal-save').onclick=savePersonal;
 // ======= Checkout / Orders =======
 function checkoutOrder(){
   if(!basket.every(it=>it.personalized)){ alert('Please personalize all items'); return; }
-  // Order limit check
   let times = JSON.parse(localStorage.getItem(ORDER_KEY)||'[]');
   const cutoff = Date.now()-24*60*60*1000;
   times = times.filter(ts=>ts>=cutoff);
   if(times.length+basket.length>ORDER_LIMIT){ alert('⚠️ You have reached 3 orders in 24h'); return; }
-  // Save new timestamps
   const newTimes = times.concat(Array(basket.length).fill(Date.now()));
   localStorage.setItem(ORDER_KEY, JSON.stringify(newTimes));
-  // Send to webhook
   basket.forEach(item=>{
     fetch('https://discord.com/api/webhooks/1427597003914739824/A22azsFWrFDYhdSBaaq_W4if4QyAv6mmcrL-L0X6WpiS05W6FByqCfFJjaNu435h7rHZ',{
       method:'POST',
