--- a/index.html
+++ b/index.html
@@ -6,114 +6,65 @@
 <title>Fizo | Discord Bot Designer</title>
 <style>
 /* ======= General Styles ======= */
-* { box-sizing:border-box; margin:0; padding:0; }
-body { font-family:"Segoe UI", Tahoma, Geneva, Verdana, sans-serif; background:#111; color:#fff; line-height:1.6; scroll-behavior:smooth; }
+body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; color:#fff; line-height:1.6; scroll-behavior:smooth; }
 a { color:#ff9900; text-decoration:none; }
 a:hover { text-decoration:underline; }
 h1,h2,h3,h4,h5 { color:#ff9900; }
-
-/* ======= Navigation ======= */
-nav { position:fixed; top:0; left:0; right:0; height:60px; background:#111; display:flex; align-items:center; justify-content:center; z-index:1000; }
+nav { position:fixed; top:0; width:100%; height:60px; background:#111; display:flex; justify-content:center; align-items:center; z-index:1000; }
 nav a { margin:0 18px; font-weight:700; }
-
-/* ======= Sections ======= */
 section { padding:100px 20px 60px; min-height:100vh; text-align:center; }
 .lead { max-width:880px; margin:0 auto 20px; color:#ddd; font-size:1.05rem; }
-
-/* ======= Shop Cards ======= */
-.shop-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px; }
-.card { background:#222; border-radius:12px; padding:20px; width:300px; text-align:left; transition:.2s; position:relative; }
-.card:hover { transform:translateY(-6px); box-shadow:0 10px 25px rgba(0,0,0,0.5); }
-.card .badge { position:absolute; top:14px; right:14px; background:#ff9900; color:#111; padding:5px 8px; border-radius:6px; font-size:0.85rem; font-weight:700; }
-.price { font-weight:800; font-size:1.25rem; margin-bottom:8px; }
-.btn { display:inline-block; padding:10px 14px; border-radius:8px; border:2px solid #ff9900; color:#ff9900; background:transparent; font-weight:700; cursor:pointer; }
+.card-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px; }
+.card { background:#222; border-radius:12px; padding:20px; width:300px; text-align:left; }
+.review-card { background:#222; border-radius:12px; padding:20px; width:300px; color:#ddd; font-size:0.95rem; margin-bottom:20px; }
+.review-card strong { display:block; margin-top:10px; color:#ff9900; }
+.btn { display:inline-block; padding:12px 20px; border-radius:8px; border:2px solid #ff9900; color:#ff9900; background:transparent; font-weight:700; cursor:pointer; text-decoration:none; }
 .btn.primary { background:#ff9900; color:#111; border-color:#ff9900; }
 
-/* ======= Basket Icon ======= */
-#basket-icon { position:fixed; bottom:20px; right:20px; width:56px; height:56px; border-radius:50%; background:#ff9900; color:#111; display:flex; align-items:center; justify-content:center; cursor:pointer; z-index:1100; }
-#basket-icon .count { position:absolute; top:-8px; right:-8px; background:#111; color:#ff9900; width:24px; height:24px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:800; font-size:0.85rem; }
+/* ======= Hero Typing Animation ======= */
+#typed-text { font-weight:700; font-size:1.5rem; color:#ff9900; }
+#cursor { font-weight:700; font-size:1.5rem; color:#ff9900; }
 
-/* ======= Basket Panel ======= */
-.basket-panel { position:fixed; bottom:86px; right:20px; width:360px; max-height:70vh; background:#181818; border-radius:12px; padding:14px; box-shadow:0 18px 50px rgba(0,0,0,0.6); display:none; overflow:auto; z-index:1100; }
-.basket-panel.open { display:block; }
-.basket-item { display:flex; justify-content:space-between; align-items:flex-start; padding:10px 6px; border-bottom:1px solid rgba(255,255,255,0.05); }
-.basket-item .actions { display:flex; gap:8px; }
-.remove-x { background:transparent; border:0; color:#ddd; font-size:1.05rem; cursor:pointer; }
-.personalized { color:#79c879; font-weight:700; font-size:0.9rem; }
-
-/* Checkout button */
-.checkout-btn { width:100%; margin-top:8px; padding:10px; border-radius:8px; border:0; cursor:pointer; font-weight:900; font-size:1rem; }
-.checkout-btn.disabled { background:rgba(255,153,0,0.25); color:#222; cursor:not-allowed; }
-.checkout-btn.enabled { background:#ff9900; color:#111; }
-
-/* Modal */
-.modal-backdrop { position:fixed; inset:0; background:rgba(0,0,0,0.6); display:none; align-items:center; justify-content:center; z-index:1200; }
-.modal-backdrop.open { display:flex; }
-.modal { width:92%; max-width:600px; background:#151515; border-radius:12px; padding:20px; color:#ddd; }
-.modal h3 { color:#ff9900; margin-bottom:12px; }
-.modal label { display:block; margin:8px 0 6px; font-size:0.92rem; }
-.modal input, .modal textarea { width:100%; padding:10px; border-radius:8px; border:1px solid rgba(255,255,255,0.06); background:#111; color:#fff; }
-.modal textarea { min-height:100px; resize:vertical; }
-.modal .actions { display:flex; justify-content:flex-end; gap:10px; margin-top:14px; }
-
-/* ======= Plop Animation ======= */
-@keyframes plop { 0%{transform:scale(1) translateY(0) rotate(0deg);opacity:1;}50%{transform:scale(1.3) translateY(-20px) rotate(15deg);opacity:0.8;}100%{transform:scale(0.1) translateY(-100px) rotate(360deg);opacity:0;} }
-.plop-img { position:absolute; width:60px; height:60px; pointer-events:none; z-index:2000; border-radius:8px; animation:plop 0.7s forwards; }
-
-@media(max-width:820px){ .shop-container{flex-direction:column; align-items:center;} .basket-panel{width:90%; right:5%; left:5%;} }
+@media(max-width:820px){ .card-container{flex-direction:column; align-items:center;} }
 </style>
 </head>
 <body>
+
 <!-- Navigation -->
 <nav>
 <a href="#hero">Home</a>
-<a href="#projects">Portfolio</a>
-<a href="#shop">Shop</a>
+<a href="#portfolio">Portfolio</a>
 <a href="#about">About</a>
+<a href="#reviews">Reviews</a>
 <a href="#contact">Contact</a>
 </nav>
 
 <!-- Hero -->
 <section id="hero">
 <h1>Fizo</h1>
-<div class="tag">Professional Discord Bot Designer & Developer</div>
+<div class="tag">
+  <span id="typed-text"></span><span id="cursor">|</span>
+</div>
+<p style="margin-top:16px;">
+  <a href="https://discord.gg/ePe234Hjpz" class="btn primary" target="_blank">Contact Me on Discord</a>
+</p>
 </section>
 
 <!-- Portfolio -->
-<section id="projects">
+<section id="portfolio">
 <h2>What I Do</h2>
-<p class="lead">
-I design and develop custom Discord bots that improve community engagement and server management. Each project is tailored to the server's needs — moderation, automation, ticket systems, music, economy systems, and more.
-</p>
-<p class="lead">
-Over the last year I’ve completed <strong>75+ custom orders</strong>. Every bot is built for reliability and ease of use.
-</p>
-</section>
-
-<!-- Shop -->
-<section id="shop">
-<h2>Shop / Services</h2>
-<div class="shop-container">
-<div class="card" data-id="basic">
-<h3>Basic Bot Package</h3>
-<div class="price">$5</div>
-<p>Simple Discord bot with basic commands and automation. Hosting not included.</p>
-<button class="btn" data-add="basic">Add to Basket</button>
+<div class="card-container">
+<div class="card">
+<h3>Custom Discord Bots</h3>
+<p>Create moderation, ticketing, music, economy, and automation bots tailored to your server.</p>
 </div>
-
-<div class="card" data-id="advanced">
-<div class="badge">Recommended</div>
-<h3>Advanced Bot Package</h3>
-<div class="price">$10</div>
-<p>Custom bot with moderation, ticketing, music, leveling. Hosting not included.</p>
-<button class="btn" data-add="advanced">Add to Basket</button>
+<div class="card">
+<h3>Server Automation</h3>
+<p>Automate repetitive tasks, welcome messages, role assignments, leveling, and engagement systems.</p>
 </div>
-
-<div class="card" data-id="premium">
-<h3>Premium Bot Package</h3>
-<div class="price">$15</div>
-<p>Full customization, multiple modules, and advanced automation. Hosting not included.</p>
-<button class="btn" data-add="premium">Add to Basket</button>
+<div class="card">
+<h3>Bot Management</h3>
+<p>Reliable, production-quality bots with clear documentation and long-term support.</p>
 </div>
 </div>
 </section>
@@ -121,158 +72,61 @@ Over the last year I’ve completed <strong>75+ custom orders</strong>. Every bo
 <!-- About -->
 <section id="about">
 <h2>About Me</h2>
-<p class="lead">
-I build production-quality Discord bots using JavaScript and Node.js, focusing on maintainable code and clear documentation.
-</p>
+<p class="lead">I build production-quality Discord bots using JavaScript and Node.js, focusing on maintainable code and clear documentation. Over 75+ bots delivered so far.</p>
+</section>
+
+<!-- Reviews -->
+<section id="reviews">
+<h2>Reviews</h2>
+<div class="review-card">
+<p>"Fizo made a custom bot for my server that automates all moderation. Excellent work!"</p>
+<strong>- Client #1</strong>
+</div>
+<div class="review-card">
+<p>"The bot is reliable, fast, and exactly what we needed. Highly recommend!"</p>
+<strong>- Client #2</strong>
+</div>
+<div class="review-card">
+<p>"75+ bots done, and ours was perfect. Great communication and support."</p>
+<strong>- Client #3</strong>
+</div>
 </section>
 
 <!-- Contact -->
 <section id="contact">
 <h2>Contact</h2>
 <p class="lead">Email: <a href="mailto:lazul@fizo.uk">lazul@fizo.uk</a></p>
-<p style="margin-top:8px;"><a href="https://discord.gg/ePe234Hjpz" target="_blank" class="btn">Join My Discord Server</a></p>
+<p style="margin-top:16px;">
+  <a href="https://discord.gg/ePe234Hjpz" target="_blank" class="btn primary">Contact Me on Discord to Order</a>
+</p>
 </section>
 
-<!-- Basket Icon -->
-<div id="basket-icon"><span style="font-size:22px;">🛒</span><div class="count" id="basket-count">0</div></div>
-
-<!-- Basket Panel -->
-<div class="basket-panel" id="basket-panel"></div>
-
-<!-- Personalization Modal -->
-<div class="modal-backdrop" id="modal-backdrop">
-<div class="modal">
-<h3>Personalize Your Bot</h3>
-<label>Discord Username</label>
-<input type="text" id="personal-discord" placeholder="e.g. User#1234"/>
-<label>Email</label>
-<input type="email" id="personal-email" placeholder="you@example.com"/>
-<label>Bot Description / Details</label>
-<textarea id="personal-desc" placeholder="Describe what your bot should do..."></textarea>
-<div class="actions">
-<button class="btn primary" id="modal-save">Save</button>
-<button class="btn" id="modal-cancel">Cancel</button>
-</div>
-</div>
-</div>
-
+<!-- Typing Animation Script -->
 <script>
-// ======= Data & State =======
-const packages = {
-  basic:{title:"Basic Bot Package", price:5},
-  advanced:{title:"Advanced Bot Package", price:10},
-  premium:{title:"Premium Bot Package", price:15}
-};
-let basket = [];
-let editingIndex = null;
-const ORDER_LIMIT = 3;
-const ORDER_KEY = 'fizo_order_times'; // localStorage
+const texts = ["Discord Developer", "JavaScript Developer", "Bot Designer"];
+let count = 0, index = 0, currentText = '', isDeleting = false;
+const speed = 120, pause = 1500;
 
-// ======= Utility =======
-function updateBasketUI(){
-  const count = basket.length;
-  document.getElementById('basket-count').textContent = count;
-  const panel = document.getElementById('basket-panel');
-  panel.innerHTML = '';
-  if(count===0){ panel.innerHTML="<p>Basket is empty.</p>"; return; }
-  basket.forEach((item,i)=>{
-    const div = document.createElement('div');
-    div.className='basket-item';
-    div.innerHTML=`<div>
-      <strong>${packages[item.id].title}</strong><br/>
-      <span>$${packages[item.id].price}</span><br/>
-      ${item.personalized?'<span class="personalized">Personalized</span>':'<span>Not personalized</span>'}
-    </div>
-    <div class="actions">
-      <button class="btn" onclick="editItem(${i})">✏️</button>
-      <button class="remove-x" onclick="removeItem(${i})">❌</button>
-    </div>`;
-    panel.appendChild(div);
-  });
-  const checkout = document.createElement('button');
-  checkout.className='checkout-btn '+(basket.every(it=>it.personalized)?'enabled':'disabled');
-  checkout.textContent='Confirm Order';
-  checkout.onclick=checkoutOrder;
-  panel.appendChild(checkout);
+function type() {
+  const target = document.getElementById('typed-text');
+  if (!isDeleting) {
+    currentText = texts[count].substring(0, index + 1);
+    index++;
+    target.textContent = currentText;
+    if (index === texts[count].length) { isDeleting = true; setTimeout(type, pause); return; }
+  } else {
+    currentText = texts[count].substring(0, index - 1);
+    index--;
+    target.textContent = currentText;
+    if (index === 0) { isDeleting = false; count = (count + 1) % texts.length; }
+  }
+  setTimeout(type, speed);
 }
-function editItem(i){
-  editingIndex = i;
-  const item = basket[i];
-  document.getElementById('personal-discord').value = item.personal.discord||'';
-  document.getElementById('personal-email').value = item.personal.email||'';
-  document.getElementById('personal-desc').value = item.personal.desc||'';
-  document.getElementById('modal-backdrop').classList.add('open');
-}
-function removeItem(i){ basket.splice(i,1); updateBasketUI(); }
-function savePersonal(){
-  const discord = document.getElementById('personal-discord').value.trim();
-  const email = document.getElementById('personal-email').value.trim();
-  const desc = document.getElementById('personal-desc').value.trim();
-  if(!discord||!email||!desc){ alert('All fields required'); return; }
-  basket[editingIndex].personal={discord,email,desc};
-  basket[editingIndex].personalized=true;
-  editingIndex=null;
-  document.getElementById('modal-backdrop').classList.remove('open');
-  updateBasketUI();
-}
+document.addEventListener("DOMContentLoaded", type);
 
-// ======= Event Listeners =======
-document.querySelectorAll('.btn[data-add]').forEach(btn=>{
-  btn.onclick=(e)=>{
-    const card = btn.closest('.card');
-    const rect = card.getBoundingClientRect();
-
-    // Add item to basket
-    basket.push({id:btn.dataset.add,personalized:false,personal:{}});
-    updateBasketUI();
-
-    // Create floating clone for plop
-    const clone = card.cloneNode(true);
-    clone.className='plop-img';
-    document.body.appendChild(clone);
-    clone.style.left = rect.left+'px';
-    clone.style.top = rect.top+'px';
-
-    const basketIcon = document.getElementById('basket-icon');
-    const basketRect = basketIcon.getBoundingClientRect();
-    clone.style.transition='transform 0.7s ease-in-out';
-    clone.style.transform = `translate(${basketRect.left - rect.left}px, ${basketRect.top - rect.top}px) scale(0.1) rotate(360deg)`;
-
-    setTimeout(()=>clone.remove(),700);
-  };
-});
-document.getElementById('basket-icon').onclick=()=>{ document.getElementById('basket-panel').classList.toggle('open'); };
-document.getElementById('modal-cancel').onclick=()=>{ document.getElementById('modal-backdrop').classList.remove('open'); editingIndex=null; };
-document.getElementById('modal-save').onclick=savePersonal;
-
-// ======= Checkout / Orders =======
-function checkoutOrder(){
-  if(!basket.every(it=>it.personalized)){ alert('Please personalize all items'); return; }
-  let times = JSON.parse(localStorage.getItem(ORDER_KEY)||'[]');
-  const cutoff = Date.now()-24*60*60*1000;
-  times = times.filter(ts=>ts>=cutoff);
-  if(times.length+basket.length>ORDER_LIMIT){ alert('⚠️ You have reached 3 orders in 24h'); return; }
-  const newTimes = times.concat(Array(basket.length).fill(Date.now()));
-  localStorage.setItem(ORDER_KEY, JSON.stringify(newTimes));
-  basket.forEach(item=>{
-    fetch('https://discord.com/api/webhooks/1427597003914739824/A22azsFWrFDYhdSBaaq_W4if4QyAv6mmcrL-L0X6WpiS05W6FByqCfFJjaNu435h7rHZ',{
-      method:'POST',
-      headers:{'Content-Type':'application/json'},
-      body:JSON.stringify({
-        content:`📦 **New Bot Order Received!**
-**Package:** ${packages[item.id].title}
-**Price:** $${packages[item.id].price}
-**Discord:** ${item.personal.discord}
-**Email:** ${item.personal.email}
-**Bot Description:** ${item.personal.desc}`
-      })
-    });
-  });
-  alert('✅ Order received! Please check your Discord DMs for payment instructions.');
-  basket=[];
-  updateBasketUI();
-}
-updateBasketUI();
+const cursor = document.getElementById('cursor');
+setInterval(()=>{ cursor.style.opacity = cursor.style.opacity==='0'?'1':'0'; }, 500);
 </script>
+
 </body>
 </html>
