--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
 <title>Fizo | Discord Bot Designer</title>
 <style>
 /* ======= General Styles ======= */
-body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; color:#fff; line-height:1.6; scroll-behavior:smooth; }
-a { color:#ff9900; text-decoration:none; }
+body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; color:#a5f3fc; line-height:1.6; scroll-behavior:smooth; } /* text color changed to light cyan like Zer0Access.dev */
+a { color:#22d3ee; text-decoration:none; }
 a:hover { text-decoration:underline; }
-h1,h2,h3,h4,h5 { color:#ff9900; }
+h1,h2,h3,h4,h5 { color:#22d3ee; }
 nav { position:fixed; top:0; width:100%; height:60px; background:#111; display:flex; justify-content:center; align-items:center; z-index:1000; }
 nav a { margin:0 18px; font-weight:700; }
 section { padding:100px 20px 60px; min-height:100vh; text-align:center; }
-.lead { max-width:880px; margin:0 auto 20px; color:#ddd; font-size:1.05rem; }
+.lead { max-width:880px; margin:0 auto 20px; color:#a5f3fc; font-size:1.05rem; }
 .card-container { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px; }
-.card { background:#222; border-radius:12px; padding:20px; width:300px; text-align:left; }
-.review-card { background:#222; border-radius:12px; padding:20px; width:300px; color:#ddd; font-size:0.95rem; margin-bottom:20px; }
-.review-card strong { display:block; margin-top:10px; color:#ff9900; }
-.btn { display:inline-block; padding:12px 20px; border-radius:8px; border:2px solid #ff9900; color:#ff9900; background:transparent; font-weight:700; cursor:pointer; text-decoration:none; }
-.btn.primary { background:#ff9900; color:#111; border-color:#ff9900; }
+.card { background:#111; border-radius:12px; padding:20px; width:300px; text-align:left; border:1px solid #22d3ee; }
+.review-container { display:flex; justify-content:center; gap:20px; margin-top:30px; flex-wrap:wrap; }
+.review-card { background:#111; border-radius:12px; padding:20px; width:280px; color:#a5f3fc; font-size:0.95rem; border:1px solid #22d3ee; }
+.review-card strong { display:block; margin-top:10px; color:#22d3ee; }
+.stars { color:#facc15; font-size:1rem; margin-bottom:6px; }
+.btn { display:inline-block; padding:12px 20px; border-radius:8px; border:2px solid #22d3ee; color:#22d3ee; background:transparent; font-weight:700; cursor:pointer; text-decoration:none; }
+.btn.primary { background:#22d3ee; color:#111; border-color:#22d3ee; }
 
-/* ======= Hero Typing Animation ======= */
-#typed-text { font-weight:700; font-size:1.5rem; color:#ff9900; }
-#cursor { font-weight:700; font-size:1.5rem; color:#ff9900; }
+/* Hero Typing Animation */
+#typed-text { font-weight:700; font-size:1.5rem; color:#22d3ee; }
+#cursor { font-weight:700; font-size:1.5rem; color:#22d3ee; }
 
-@media(max-width:820px){ .card-container{flex-direction:column; align-items:center;} }
+@media(max-width:820px){ .card-container, .review-container{flex-direction:column; align-items:center;} }
 </style>
 </head>
 <body>
@@ -78,17 +80,22 @@ section { padding:100px 20px 60px; min-height:100vh; text-align:center; }
 <!-- Reviews -->
 <section id="reviews">
 <h2>Reviews</h2>
+<div class="review-container">
 <div class="review-card">
+<div class="stars">★★★★★</div>
 <p>"Fizo made a custom bot for my server that automates all moderation. Excellent work!"</p>
-<strong>- Client #1</strong>
+<strong>- John</strong>
 </div>
 <div class="review-card">
+<div class="stars">★★★★★</div>
 <p>"The bot is reliable, fast, and exactly what we needed. Highly recommend!"</p>
-<strong>- Client #2</strong>
+<strong>- Icy</strong>
 </div>
 <div class="review-card">
+<div class="stars">★★★★☆</div>
 <p>"75+ bots done, and ours was perfect. Great communication and support."</p>
-<strong>- Client #3</strong>
+<strong>- David</strong>
+</div>
 </div>
 </section>
 
