--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ section { padding:100px 20px 60px; min-height:100vh; text-align:center; }
 <!-- About -->
 <section id="about">
 <h2>About Me</h2>
-<p class="lead">I build production-quality Discord bots using JavaScript and Node.js, focusing on maintainable code and clear documentation. Over 75+ bots delivered so far.</p>
+<p class="lead">I build production-quality Discord bots, focusing on maintainable code and clear documentation. Over 7+ bots delivered so far.</p>
 </section>
 
 <!-- Reviews -->
@@ -93,7 +93,7 @@ section { padding:100px 20px 60px; min-height:100vh; text-align:center; }
 </div>
 <div class="review-card">
 <div class="stars">★★★★☆</div>
-<p>"75+ bots done, and ours was perfect. Great communication and support."</p>
+<p>"Great communication and support very fast!"</p>
 <strong>- David</strong>
 </div>
 </div>
