--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>FIZO</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <nav class="navbar">
+    <div class="nav-left">FIZO</div>
+    <div class="nav-right"><a href="login.html">Login</a></div>
+  </nav>
+
+  <main>
+    <h1>Welcome to FIZO</h1>
+    <div id="chat"></div>
+    <input id="input" placeholder="Ask me something..." />
+  </main>
+
+  <script src="app.js"></script>
+</body>
+</html>
 
